<resources>
    <string name="app_name">ST_task_kuda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_money_app_for_africans">The money app for\nAfricans.</string>
    <string name="open_an_account">Open An Account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="pick_a_currency">Pick A Currency</string>
    <string name="open_a_balance_to_send_spend_and_nreceive_money_in_minutes">Open a balance to send, spend and \nreceive money in minutes.</string>
    <string name="ngn_account">NGN Account</string>
    <string name="minimum_requirements_for_this_account">Minimum requirements for this account</string>
    <string name="gbp_account">GBP Account</string>
    <string name="a_bvn_bank_verification_number">A BVN (Bank Verification Number)</string>
    <string name="a_valid_uk_address">A valid UK address</string>
    <string name="next">Next</string>
    <string name="referral_code">Referral Code?</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="hey_there">Hey there!</string>
    <string name="email_address">Email Address</string>
    <string name="youremail_here_com">youremail@here.com</string>
    <string name="create_a_kuda">Create a Kuda profile with a few \ndetails. Your password must have at \nleast 8 characters including letters and \na number.</string>
    <string name="email_amp_password"><![CDATA[Email & Password]]></string>
    <string name="spread_the_love">Spread the love!</string>
    <string name="invite_your_friends">Invite your friends and family \nto enjoy Kuda with your \nreferral code</string>
    <!--    <string name="by_tapping">By tapping \"Next\", you agree to our \nTerms &amp; Conditions and Privacy Policy</string>-->
    <string name="by_tapping">By tapping "Next", you agree to our\n<font style="bold" fgcolor="#48D38A" size="16">&lt;a href="terms_conditions" &gt;Terms &amp; Conditions and Privacy Policy.&lt;/a&gt;</font></string>
    <string name="have_a_referral_code">Have a referral code?</string>
    <string name="xxxxxxxxxx">xxxxxxxxxx</string>
    <string name="ugx_account">UGX Account</string>
    <string name="create_a_passcode">Create a passcode to sign in to your \naccount securely. Please don\'t share \nyour passcode with anyone</string>
    <string name="passcode">Passcode</string>
    <string name="cpasscode">Confirm Passcode</string>
    <string name="r_code_nigeria_only">Referral Code (Nigeria Only)</string>
    <string name="you_ve_set_your_passcode">You\'ve set your passcode.</string>
    <string name="you_can_now">You can now sign in to your account \nwith your passcode.</string>
    <string name="okay">Okay</string>
    <string name="confirm_your_passcode">Confirm your Passcode</string>
    <string name="confirm_email">We\'ll send a code to your email address \nto confirm that it\'s actually yours.</string>
    <string name="verification_code">Verification Code</string>
    <string name="pass_hint">••••••••••</string>
    <string name="resend_code">Resend Code</string>
    <string name="open_email_app">Open Email App</string>
    <string name="about_you">Tell Us A Bit About Yourself</string>
    <string name="add_your_name">Please add your name as it appears\non your official documents or means of\nidentification.</string>
    <string name="legal_first_name">Legal First Name</string>
    <string name="uzowuihe">Uzowuihe</string>
    <string name="legal_mn">Legal Middle Name (Optional)</string>
    <string name="legal_ln">Legal Last Name</string>
    <string name="chioma">Chioma</string>
    <string name="gender">Gender</string>
    <string name="choose_one">Choose One</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="dob">Date Of Birth</string>
    <string name="cynthia_dazzling">Cynthia Dazzling</string>
    <string name="please_complete">Please complete yur profilesetup below to remove the limits on your account.</string>
    <string name="get_started">Get Started</string>
    <string name="reset">Reset</string>
    <string name="please_enter">Please enter the email address on your \nKuda account.</string>
    <string name="done">Done</string>
    <string name="change_password">Change Password</string>
    <string name="sign_in">Sign In</string>
    <string name="passwordhint">••••••••••</string>
    <string name="password">Password</string>
</resources>