<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.AboutYouFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="6dp">

            <ImageView
                android:id="@+id/about_you_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/muli_extrabold"
                android:text="@string/about_you"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/muli"
                android:text="@string/add_your_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/muli"
                android:text="@string/legal_first_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/legal_fn_tlo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                app:boxStrokeColor="@color/kuda_purple"
                app:boxStrokeWidth="0dp"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/legal_fn_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:hint="@string/chioma"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingTop="10dp"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/muli"
                android:text="@string/legal_mn"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/legal_mn_tlo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                app:boxStrokeColor="@color/kuda_purple"
                app:boxStrokeWidth="0dp"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/legal_mn_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:hint="@string/cynthia_dazzling"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingTop="10dp"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/muli"
                android:text="@string/legal_ln"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/legal_ln_tlo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                app:boxStrokeColor="@color/kuda_purple"
                app:boxStrokeWidth="0dp"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/legal_ln_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:hint="@string/uzowuihe"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingTop="10dp"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/muli"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gender_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:gravity="start"
                android:textColor="@color/kuda_grey3"
                android:text="@string/gender"
                android:textAllCaps="false"
                android:background="@color/kuda_grey2"
                android:fontFamily="@font/muli"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/muli"
                android:text="@string/dob"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/already_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:gravity="start"
                android:textColor="@color/kuda_grey3"
                android:hint="@string/dd_mm_yyyy"
                android:textAllCaps="false"
                android:background="@color/kuda_grey2"
                android:fontFamily="@font/muli"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/about_you_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border"
        android:fontFamily="@font/muli_extrabold"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/kuda_purple" />
</LinearLayout>