<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".PasscodeOkFragment">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:src="@drawable/img_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/muli_extrabold"
        android:text="@string/you_ve_set_your_passcode"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:fontFamily="@font/muli"
        android:text="@string/you_can_now"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:paddingVertical="12dp"
        android:textColor="@color/white"
        android:text="@string/okay"
        android:gravity="center"
        android:visibility="invisible"
        android:textAllCaps="false"
        app:backgroundTint="@color/kuda_purple"
        android:background="@drawable/border"
        android:fontFamily="@font/muli_extrabold"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/open_account_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="30dp"
        android:paddingVertical="12dp"
        android:textColor="@color/white"
        android:text="@string/okay"
        android:gravity="center"
        android:textAllCaps="false"
        app:backgroundTint="@color/kuda_purple"
        android:background="@drawable/border"
        android:fontFamily="@font/muli_extrabold"
        android:textSize="16sp"
        android:textStyle="bold"/>


</LinearLayout>