<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/reset_password_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/muli_extrabold"
            android:text="Reset your password"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/muli"
            android:text="@string/please_enter"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/muli"
            android:text="@string/email_address"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_password_email_tlo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/kuda_purple"
            app:hintEnabled="false"
            app:helperTextTextColor="@android:color/holo_red_dark">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reset_password_email_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/youremail_here_com"
                android:paddingTop="10dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:lines="1"/>
        </com.google.android.material.textfield.TextInputLayout>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:visibility="invisible"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/border"
            android:fontFamily="@font/muli_extrabold"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/kuda_purple" />
        <TextView
            android:id="@+id/reset_password_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/border"
            android:fontFamily="@font/muli_extrabold"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/kuda_purple" />
    </LinearLayout>

</LinearLayout>