<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SignUpFragment">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_question_mark_24"
        android:background="@drawable/circle2"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img_1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hey_there"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="@font/muli_extrabold"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:text="@string/email_address"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/muli"
        android:layout_gravity="start"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:boxStrokeWidth="3dp"
        app:boxStrokeColor="@color/black"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:helperText="Username or password is invalid.">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/youremail_here_com"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:lines="1"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:text="Password"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/muli"
        android:layout_gravity="start"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:boxStrokeWidth="3dp"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:helperText="Username or password is invalid."
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="••••••••••"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:lines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:fontFamily="@font/muli_extrabold"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="Sign In"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/kuda_purple" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:paddingVertical="12dp"
        android:gravity="center"
        android:textColor="@color/kuda_green"
        android:text="Change Password"
        android:textAllCaps="false"
        android:fontFamily="@font/muli_extrabold"
        android:textSize="19sp"
        android:textStyle="bold"/>

</LinearLayout>